* 2014-06-11 - thorben.betten@open-xchange.com

 - Fix for bug 33061: Ignore alternative HTML part nested inside multipart/related part if text-only is user's preference

* 2014-06-06 - thorben.betten@open-xchange.com

 - Fix for bug 32974: Cancel running IMAP-IDLE listener in case context has been deleted in the meantime +
                      Improved handling in ReplicationMonitor class to avoid default retry mechanism in case a "DBP-0021" (Transaction counter is missing) occurs

* 2014-06-04 - thorben.betten@open-xchange.com

 - Fix for bug 32899: Let 'Capability' class implement java.io.Serializable marker interface

* 2014-06-03 - jan.bauerdick@open-xchange.com

 - Fix for bug 32865: Don't anticipate upcoming ACKNOWLEDGE for the new version of server-side executed EDIT action 

* 2014-06-03 - marcus.klein@open-xchange.com

 - Fix for bug 32743: Property was added in a patch and according post installation scripting should be contained in a patch, too.

* 2014-06-02 - thorben.betten@open-xchange.com

 - Fix for bug 32555: Keep other Content-Type parameters when fixing Apple Mailer messages
 - Fix for bug 32625: Keep subscription statuses when moving IMAP folders

* 2014-05-22 - thorben.betten@open-xchange.com

 - Fix for bug 32677: Do net set SMTP credentials if not explicitly set + several sanitizing operations to ensure SMTP authentication does still work

* 2014-05-21 - thorben.betten@open-xchange.com

 - Fix for bug 32226: Fixed regex used for look-up of referenced inline images

* 2014-05-19 - thorben.betten@open-xchange.com

 - Fix for bug 32481: Ignore requests to LinkedIn JSON API if no LinkedIn OAuth account is available for associated user

* 2014-05-14 - thorben.betten@open-xchange.com

 - Fix for bug 32519: Fixed parsing JSON in case JSON NULL is set as value and fall-back to mail account credentials if transport ones seems to be "not set"

* 2014-05-13 - thorben.betten@open-xchange.com
