@@ -57,6 +57,7 @@ import java.security.DigestInputStream;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
@@ -66,6 +67,7 @@ import java.util.TreeSet;
 import java.util.UUID;
 import com.amazonaws.AmazonClientException;
 import com.amazonaws.services.s3.AmazonS3Client;
+import com.amazonaws.services.s3.internal.BucketNameUtils;
 import com.amazonaws.services.s3.model.AbortMultipartUploadRequest;
 import com.amazonaws.services.s3.model.CompleteMultipartUploadRequest;
 import com.amazonaws.services.s3.model.DeleteObjectsRequest;
@@ -77,10 +79,12 @@ import com.amazonaws.services.s3.model.MultiObjectDeleteException.DeleteError;
 import com.amazonaws.services.s3.model.ObjectListing;
 import com.amazonaws.services.s3.model.ObjectMetadata;
 import com.amazonaws.services.s3.model.PartETag;
+import com.amazonaws.services.s3.model.S3Object;
 import com.amazonaws.services.s3.model.S3ObjectSummary;
 import com.amazonaws.services.s3.model.UploadPartRequest;
 import com.openexchange.exception.OXException;
 import com.openexchange.java.Streams;
+import com.openexchange.java.Strings;
 import com.openexchange.java.util.UUIDs;
 import com.openexchange.tools.encoding.Base64;
 import com.openexchange.tools.file.external.FileStorage;
@@ -100,20 +104,33 @@ public class S3FileStorage implements FileStorage {
      */
     private static final int UPLOAD_BUFFER_SIZE = 1024 * 1024 * 2; // 2 MiB
 
+    /**
+     * The delimiter character to separate the prefix from the keys
+     */
+    private static final String DELIMITER = "/";
+
     private final AmazonS3Client amazonS3;
     private final String bucketName;
+    private final String prefix;
 
     /**
      * Initializes a new {@link S3FileStorage}.
      *
      * @param amazonS3 The underlying S3 client
      * @param bucketName The bucket name to use
+     * @param prefix The prefix to use
      * @throws OXException
      */
-    public S3FileStorage(AmazonS3Client amazonS3, String bucketName) throws OXException {
+    public S3FileStorage(AmazonS3Client amazonS3, String bucketName, String prefix) {
         super();
+        BucketNameUtils.validateBucketName(bucketName);
+        if (Strings.isEmpty(prefix) || prefix.contains(DELIMITER)) {
+            throw new IllegalArgumentException(prefix);
+        }
         this.amazonS3 = amazonS3;
         this.bucketName = bucketName;
+        this.prefix = prefix;
+        LOG.info("S3 file storage initialized for \"" + bucketName + "/" + prefix + DELIMITER + "\"");
     }
 
     @Override
@@ -121,7 +138,7 @@ public class S3FileStorage implements FileStorage {
         /*
          * prepare upload
          */
-        String key = newUid();
+        String key = generateKey(true);
         DigestInputStream digestStream = null;
         try {
             byte[] buffer = new byte[UPLOAD_BUFFER_SIZE];
@@ -182,7 +199,7 @@ public class S3FileStorage implements FileStorage {
                     }
                 }
             }
-            return key;
+            return removePrefix(key);
         } catch (NoSuchAlgorithmException e) {
             throw FileStorageCodes.IOERROR.create(e, e.getMessage());
         } catch (IOException e) {
@@ -196,11 +213,7 @@ public class S3FileStorage implements FileStorage {
 
     @Override
     public InputStream getFile(String name) throws OXException {
-        try {
-            return amazonS3.getObject(bucketName, name).getObjectContent();
-        } catch (AmazonClientException e) {
-            throw wrap(e, name);
-        }
+        return getObject(addPrefix(name)).getObjectContent();
     }
 
     @Override
@@ -209,12 +222,13 @@ public class S3FileStorage implements FileStorage {
         /*
          * results may be paginated - repeat listing objects as long as result is truncated
          */
-        ListObjectsRequest listObjectsRequest = new ListObjectsRequest().withBucketName(bucketName);
+        ListObjectsRequest listObjectsRequest = new ListObjectsRequest()
+            .withBucketName(bucketName).withDelimiter(DELIMITER).withPrefix(prefix + DELIMITER);
         ObjectListing objectListing;
         do {
             objectListing = amazonS3.listObjects(listObjectsRequest);
             for (S3ObjectSummary objectSummary : objectListing.getObjectSummaries()) {
-                files.add(objectSummary.getKey());
+                files.add(removePrefix(objectSummary.getKey()));
             }
             listObjectsRequest.setMarker(objectListing.getNextMarker());
         } while (objectListing.isTruncated());
@@ -223,28 +237,29 @@ public class S3FileStorage implements FileStorage {
 
     @Override
     public long getFileSize(final String name) throws OXException {
-        return getMetadata(name).getContentLength();
+        return getMetadata(addPrefix(name)).getContentLength();
     }
 
     @Override
     public String getMimeType(String name) throws OXException {
         //TODO: makes no sense at storage layer
-        return getMetadata(name).getContentType();
+        return getMetadata(addPrefix(name)).getContentType();
     }
 
     @Override
-    public boolean deleteFile(String identifier) throws OXException {
+    public boolean deleteFile(String name) throws OXException {
+        String key = addPrefix(name);
         try {
-            amazonS3.deleteObject(bucketName, identifier);
+            amazonS3.deleteObject(bucketName, key);
             return true;
         } catch (AmazonClientException e) {
-            throw wrap(e, identifier);
+            throw wrap(e, key);
         }
     }
 
     @Override
-    public Set<String> deleteFiles(String[] identifiers) throws OXException {
-        DeleteObjectsRequest deleteRequest = new DeleteObjectsRequest(bucketName).withKeys(identifiers);
+    public Set<String> deleteFiles(String[] names) throws OXException {
+        DeleteObjectsRequest deleteRequest = new DeleteObjectsRequest(bucketName).withKeys(addPrefix(names));
         try {
             amazonS3.deleteObjects(deleteRequest);
         } catch (MultiObjectDeleteException e) {
@@ -252,7 +267,7 @@ public class S3FileStorage implements FileStorage {
             if (null != errors && 0 < errors.size()) {
                 Set<String> notDeleted = new HashSet<String>();
                 for (DeleteError error : errors) {
-                    notDeleted.add(error.getKey());
+                    notDeleted.add(removePrefix(error.getKey()));
                 }
                 return notDeleted;
             }
@@ -266,13 +281,6 @@ public class S3FileStorage implements FileStorage {
     public void remove() throws OXException {
         try {
             /*
-             * check if bucket exists first
-             */
-            if (false == amazonS3.doesBucketExist(bucketName)) {
-                LOG.warn("Bucket \"" + bucketName + "\" does not exists - skipping deletion.");
-                return;
-            }
-            /*
              * try and delete all contained files repeatedly
              */
             final int RETRY_COUNT = 10;
@@ -282,8 +290,7 @@ public class S3FileStorage implements FileStorage {
                     if (null == fileList || 0 == fileList.size()) {
                         break; // no more files found
                     }
-                    String[] identifiers = fileList.toArray(new String[fileList.size()]);
-                    amazonS3.deleteObjects(new DeleteObjectsRequest(bucketName).withKeys(identifiers));
+                    amazonS3.deleteObjects(new DeleteObjectsRequest(bucketName).withKeys(addPrefix(fileList)));
                 } catch (MultiObjectDeleteException e) {
                     if (i < RETRY_COUNT - 1) {
                         LOG.warn("Not all files in bucket deleted yet, trying again.", e);
@@ -292,10 +299,6 @@ public class S3FileStorage implements FileStorage {
                     }
                 }
             }
-            /*
-             * delete bucket
-             */
-            amazonS3.deleteBucket(bucketName);
         } catch (OXException e) {
             throw FileStorageCodes.NOT_ELIMINATED.create(e);
         } catch (AmazonClientException e) {
@@ -322,8 +325,9 @@ public class S3FileStorage implements FileStorage {
         /*
          * prepare temporary file for append operation
          */
-        String tempKey = newUid();
-        String uploadID = initiateMultipartUpload(name);
+        String key = addPrefix(name);
+        String tempKey = generateKey(true);
+        String uploadID = initiateMultipartUpload(key);
         boolean completed = false;
         try {
             /*
@@ -332,7 +336,7 @@ public class S3FileStorage implements FileStorage {
             List<PartETag> partETags = new ArrayList<PartETag>();
             InputStream inputStream = null;
             try {
-                inputStream = getFile(name);
+                inputStream = getObject(key).getObjectContent();
                 UploadPartRequest request = new UploadPartRequest().withBucketName(bucketName).withKey(tempKey).withUploadId(uploadID)
                     .withInputStream(inputStream).withPartSize(offset).withPartNumber(1 + partETags.size());
                 partETags.add(amazonS3.uploadPart(request).getPartETag());
@@ -374,11 +378,11 @@ public class S3FileStorage implements FileStorage {
             /*
              * replace old file, cleanup
              */
-            amazonS3.copyObject(bucketName, tempKey, bucketName, name);
+            amazonS3.copyObject(bucketName, tempKey, bucketName, key);
             amazonS3.deleteObject(bucketName, tempKey);
-            return getMetadata(name).getContentLength();
+            return getMetadata(key).getContentLength();
         } catch (AmazonClientException e) {
-            throw wrap(e, name);
+            throw wrap(e, key);
         } finally {
             if (false == completed) {
                 try {
@@ -399,9 +403,10 @@ public class S3FileStorage implements FileStorage {
         /*
          * copy previous file to temporary file
          */
-        String tempKey = newUid();
+        String key = addPrefix(name);
+        String tempKey = generateKey(true);
         try {
-            amazonS3.copyObject(bucketName, name, bucketName, tempKey);
+            amazonS3.copyObject(bucketName, key, bucketName, tempKey);
             /*
              * upload $length bytes from previous file to new current file
              */
@@ -410,12 +415,12 @@ public class S3FileStorage implements FileStorage {
             InputStream inputStream = null;
             try {
                 inputStream = getFile(tempKey, 0, length);
-                amazonS3.putObject(bucketName, name, inputStream, metadata);
+                amazonS3.putObject(bucketName, key, inputStream, metadata);
             } finally {
                 Streams.close(inputStream);
             }
         } catch (AmazonClientException e) {
-            throw wrap(e, name);
+            throw wrap(e, key);
         } finally {
             try {
                 amazonS3.deleteObject(bucketName, tempKey);
@@ -427,19 +432,19 @@ public class S3FileStorage implements FileStorage {
 
     @Override
     public InputStream getFile(String name, long offset, long length) throws OXException {
-        GetObjectRequest request = new GetObjectRequest(bucketName, name);
-        request.setRange(offset, offset + length - 1);
+        String key = addPrefix(name);
+        GetObjectRequest request = new GetObjectRequest(bucketName, key).withRange(offset, offset + length - 1);
         try {
             return amazonS3.getObject(request).getObjectContent();
         } catch (AmazonClientException e) {
-            throw wrap(e, name);
+            throw wrap(e, key);
         }
     }
 
     /**
      * Initiates a new multipart upload for a file with the supplied key.
      *
-     * @param key The key for the new file
+     * @param key The (full) key for the new file; no additional prefix will be prepended implicitly
      * @return The upload ID for the multipart upload
      * @throws OXException
      */
@@ -467,12 +472,84 @@ public class S3FileStorage implements FileStorage {
     }
 
     /**
-     * Creates an unformatted string representation of a new random UUID.
+     * Gets a stored S3 object.
      *
-     * @return A new UID string, e.g. <code>067e61623b6f4ae2a1712470b63dff00 </code>.
+     * @param key The key of the file
+     * @return The S3 object
+     * @throws OXException
      */
-    private static String newUid() {
-        return UUIDs.getUnformattedString(UUID.randomUUID());
+    private S3Object getObject(String key) throws OXException {
+        try {
+            return amazonS3.getObject(bucketName, key);
+        } catch (AmazonClientException e) {
+            throw wrap(e, key);
+        }
+    }
+
+    /**
+     * Creates a new arbitrary key (an unformatted string representation of a new random UUID), optionally prepended with the configured
+     * prefix and delimiter.
+     *
+     * @param withPrefix <code>true</code> to prepend the prefix, <code>false</code>, otherwise
+     *
+     * @return A new UID string, optionally with prefix and delimiter, e.g. <code>[prefix]/067e61623b6f4ae2a1712470b63dff00</code>.
+     */
+    private String generateKey(boolean withPrefix) {
+        String uuid = UUIDs.getUnformattedString(UUID.randomUUID());
+        return withPrefix ? prefix + DELIMITER + uuid : uuid;
+    }
+
+    /**
+     * Prepends the configured prefix and delimiter character sequence to the supplied name.
+     *
+     * @param name The name to prepend the prefix
+     * @return The name with prefix
+     */
+    private String addPrefix(String name) {
+        return prefix + DELIMITER + name;
+    }
+
+    /**
+     * Prepends the configured prefix and delimiter character sequence to the supplied names.
+     *
+     * @param names The names to prepend the prefix
+     * @return The names with prefix in an array
+     */
+    private String[] addPrefix(Collection<? extends String> names) {
+        String[] keys = new String[names.size()];
+        int i = 0;
+        for (String name : names) {
+            keys[i++] = addPrefix(name);
+        }
+        return keys;
+    }
+
+    /**
+     * Prepends the configured prefix and delimiter character sequence to the supplied names.
+     *
+     * @param names The names to prepend the prefix
+     * @return The names with prefix in an array
+     */
+    private String[] addPrefix(String[] names) {
+        String[] keys = new String[names.length];
+        for (int i = 0; i < names.length; i++) {
+            keys[i] = addPrefix(names[i]);
+        }
+        return keys;
+    }
+
+    /**
+     * Strips the prefix and delimiter character sequence to the supplied key.
+     *
+     * @param key The key to strip the prefix from
+     * @return The key without prefix
+     */
+    private String removePrefix(String key) {
+        int idx = prefix.length() + DELIMITER.length();
+        if (idx > key.length() || false == key.startsWith(prefix + DELIMITER)) {
+            throw new IllegalArgumentException(key);
+        }
+        return key.substring(idx);
     }
 
     /**
